--- a/react-native-arcore/android/src/main/res/layout/activity_main.xml
+++ b/react-native-arcore/android/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.reactlibrary.helloar.rendering.HelloArActivity">
+    tools:context="com.reactlibrary.arutil.rendering.HelloArActivity">
 
     <android.opengl.GLSurfaceView
         android:id="@+id/surfaceview"
